Fixing bug on mobile devices with the scroll-to-top button

--- a/src/vue/UI/ScrollTopBtn/style.sass
+++ b/src/vue/UI/ScrollTopBtn/style.sass
@@ -26,12 +26,8 @@
 	&.jump
 		transform: translateY(-16px)
 	@media (max-width: 480px)
-		width: 35px
-		height: 35px
-		right: 15px
-		bottom: 15px
-		svg 
-			width: 15px
+		width: 40px
+		height: 40px
 
 @keyframes jump
 	0%
